--- a/PawellsMusicEditor/PawellsMusicEditor/Views/Home/Index.cshtml
+++ b/PawellsMusicEditor/PawellsMusicEditor/Views/Home/Index.cshtml
@@ -3,6 +3,7 @@
     Layout = "~/Views/Shared/_LayoutHome.cshtml";
 }
 
+<h1>@ViewBag.Title</h1>
 <h2 style="text-align:center;">WELCOME TO THE ONLINE MUSIC EDITOR.</h2>
 <div id="links" class="center">
     <a href="@Url.Action("Index", "MusicEditor")">
