--- a/PawellsMusicEditor/PawellsMusicEditor/Views/Home/Index.cshtml
+++ b/PawellsMusicEditor/PawellsMusicEditor/Views/Home/Index.cshtml
@@ -2,18 +2,29 @@
     ViewBag.Title = "Home";
     Layout = "~/Views/Shared/_LayoutHome.cshtml";
 }
+<div class="large-12 columns content-wrapper">
+    <div class="panel callout mano">
+        <h5>@ViewBag.Title</h5>
+        <p>WELCOME TO THE ONLINE MUSIC EDITOR.</p>
+    </div>
 
-<h1>@ViewBag.Title</h1>
-<h2 style="text-align:center;">WELCOME TO THE ONLINE MUSIC EDITOR.</h2>
-<div id="links" class="center">
-    <a href="@Url.Action("Index", "MusicEditor")">
-        <img src="../Images/MusicEditor.jpg" alt="People dancing" />
-    </a>
-    <a href="@Url.Action("Index", "MusicEditor")">
-        <img src="../Images/MusicEditor.jpg" alt="People dancing" />
-    </a>
-    <a href="@Url.Action("Index", "MusicEditor")">
-        <img src="../Images/MusicEditor.jpg" alt="People dancing" />
-    </a>
+    <div class="row" data-equalizer>
+        <div class="large-4 columns" data-equalizer-watch>
+            <a class="th" href="@Url.Action("Index", "MusicEditor")">
+                <img src="../Images/MusicEditor.jpg" alt="People dancing" />
+            </a>
+        </div>
+        <div class="large-4 columns" data-equalizer-watch>
+            <a class="th" href="@Url.Action("Index", "MusicEditor")">
+                <img src="../Images/MusicEditor.jpg" alt="People dancing" />
+            </a>
+        </div>
+        <div class="large-4 columns" data-equalizer-watch>
+            <a class="th" href="@Url.Action("Index", "MusicEditor")">
+                <img src="../Images/MusicEditor.jpg" alt="People dancing" />
+            </a>
+        </div>
+    </div>
 </div>
+
 
