--- a/PawellsMusicEditor/PawellsMusicEditor/Views/Shared/_LayoutHome.cshtml
+++ b/PawellsMusicEditor/PawellsMusicEditor/Views/Shared/_LayoutHome.cshtml
@@ -4,33 +4,37 @@
 <head>
     <meta name="viewport" content="width=device-width" />
     <title>@ViewBag.Title</title>
+    <link href="//cdnjs.cloudflare.com/ajax/libs/foundation/5.2.2/css/normalize.min.css" rel="stylesheet" type="text/css" />
+    <link href="//cdnjs.cloudflare.com/ajax/libs/foundation/5.2.2/css/foundation.min.css" rel="stylesheet" type="text/css" />
+    <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css" rel="stylesheet" type="text/css" />
     <link href="@Url.Content("~/Content/StyleHome.css")" rel="stylesheet" type="text/css" />
+    <link href="@Url.Content("~/Content/themes/base/jquery-ui.css")" rel="stylesheet" type="text/css" />
+    
+
     @RenderSection("Styles", false)
 </head>
 <body>
-    <header>
-        <div class="content-wrapper white-background">
-            <div class="float-left">
-                <p class="site-title">@Html.ActionLink("your logo here", "Index", "Home")</p>
-            </div>
-            <div class="float-right">
-                <section id="login">
-                    Login
-                </section>
-                <nav>
-                    <ul id="menu">
-                        <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                        <li>@Html.ActionLink("About", "About", "Home")</li>
-                        <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
-                    </ul>
-                </nav>
-            </div>
-        </div>
-    </header>
-    <div id ="body" class="center">
-        <div class="content-wrapper">
-            @RenderBody()
-        </div>
+    <nav class="top-bar" data-topbar>
+        <ul class="title-area">
+            <li class="name">
+                <h1>@Html.ActionLink("your logo here", "Index", "Home")</h1>
+            </li>
+            <!-- Remove the class "menu-icon" to get rid of menu icon. Take out "Menu" to just have icon alone -->
+            <li class="toggle-topbar menu-icon"><a href="#"><span>Menu</span></a></li>
+        </ul>
+
+        <section class="top-bar-section">
+            <!-- Left Nav Section -->
+            <ul class="right">
+                <li class="active">@Html.ActionLink("Home", "Index", "Home")</li>
+                <li>@Html.ActionLink("About", "About", "Home")</li>
+                <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
+            </ul>
+        </section>
+    </nav>
+
+    <div id ="body" class="row center"  >
+        @RenderBody()
     </div>
     <footer>
         <div class="content-wrapper white-background">
@@ -45,6 +49,7 @@
     </footer>
     <script src="@Url.Content("~/Scripts/jquery-2.1.0.min.js")" type="text/javascript"></script>
     <script src="@Url.Content("~/Scripts/jquery-ui-1.10.4.min.js")" type="text/javascript"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/foundation/5.2.2/js/foundation.min.js" type="text/javascript"></script>
     <script src="@Url.Content("~/Scripts/JS.js")" type="text/javascript"></script>
         </body>
         </html>
