--- a/PawellsMusicEditor/PawellsMusicEditor/Views/Shared/_LayoutHome.cshtml
+++ b/PawellsMusicEditor/PawellsMusicEditor/Views/Shared/_LayoutHome.cshtml
@@ -7,8 +7,11 @@
     <link href="//cdnjs.cloudflare.com/ajax/libs/foundation/5.2.2/css/normalize.min.css" rel="stylesheet" type="text/css" />
     <link href="//cdnjs.cloudflare.com/ajax/libs/foundation/5.2.2/css/foundation.min.css" rel="stylesheet" type="text/css" />
     <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css" rel="stylesheet" type="text/css" />
+    
     <link href="@Url.Content("~/Content/StyleHome.css")" rel="stylesheet" type="text/css" />
     <link href="@Url.Content("~/Content/themes/base/jquery-ui.css")" rel="stylesheet" type="text/css" />
+
+    
     
 
     @RenderSection("Styles", false)
@@ -25,7 +28,7 @@
 
         <section class="top-bar-section">
             <ul class="right">
-                <li class="active">@Html.ActionLink("Home", "Index", "Home")</li>
+                <li>@Html.ActionLink("Home", "Index", "Home")</li>
                 <li>@Html.ActionLink("About", "About", "Home")</li>
                 <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
             </ul>
