--- a/PawellsMusicEditor/PawellsMusicEditor/Content/StyleHome.css
+++ b/PawellsMusicEditor/PawellsMusicEditor/Content/StyleHome.css
@@ -128,6 +128,12 @@ a.th {
     margin-top:15px;
 }
 
+#range-slider
+{
+    margin-bottom:15px;
+    margin-top:15px;
+}
+
 #File{
     display:none;
 }
@@ -199,4 +205,9 @@ a.th {
 #song-list li {
     padding: 3px 5px;
     overflow: hidden;
+}
+/*-------------------------*/
+
+.hidden{
+    display:none;
 }
